# flexible-rag

./: .coverage-tmp.html  .pre-commit-config.yaml  404.html  CHANGELOG.md  CNAME  Dockerfile  LICENSE  README.md  build_openapi.py  codecov.yaml  compose.dev.yml  compose.yml  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  release.yml  telegram.yml
api/: __init__.py  config.py  dependencies.py  main.py  openapi.json  restful.html  swagger-d1a8e5b4.html
api/routes/: __init__.py  chat_llm.py  rerank.py  vector_store.py
blog/: index.html
blog/2024/10/24/: example-post.html
blog/archive/: 2024.html
blog/category/: example-category.html
changelog/: index.html
core/: __init__.py  chat_llm.py  rerank.py  vector_store.py
core/models/: __init__.py  chat.py  documents.py
docs/api/: restful.md
docs/blog/: .authors.yml
docs/blog/posts/: index.md
docs/overrides/partials/: comments.html
reference/: SUMMARY.html
reference/api/: config.html  dependencies.html  index.html  main.html
reference/api/routes/: chat_llm.html  index.html  rerank.html  vector_store.html
reference/core/: chat_llm.html  index.html  rerank.html  vector_store.html
reference/core/models/: chat.html  documents.html  index.html
scripts/: gen_ref_nav.py
search/: search_index.js  search_index.json
stylesheets/: extra.css
tests/: sample.py  test_sample.py  test_vector_store.py
tests/api/: test_main.py
tests/core/: test_chat_llm.py  test_rerank.py  test_vector_store.py
tests/fake/: llm_chat.py  rerank.py
