[tool.poetry]
name = "flexible-rag"
version = "1.1.3"
description = "Flexible RAG"
authors = ["Kim Minh Thang <thangved02@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.core.dependencies]
pydantic = "^2.9.2"
chromadb = "^0.5.15"
nanoid = "^2.0.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
trio = "^0.27.0"



[tool.poetry.group.api.dependencies]
fastapi = {extras = ["standard"], version = "^0.115.2"}
cohere = "^5.11.1"


[tool.poetry.group.docs.dependencies]
mkdocs-material = {extras = ["projects"], version = "^9.5.42"}
mkdocs-rss-plugin = "^1.15.0"
mkdocs-coverage = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
