[tool.poetry]
name = "flexible-rag"
version = "2.1.0"
description = "Flexible RAG"
authors = ["Kim Minh Thang <thangved02@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.core.dependencies]
pydantic = "^2.9.2"
chromadb = "^0.6.0"
nanoid = "^2.0.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
trio = "^0.29.0"



[tool.poetry.group.api.dependencies]
fastapi = {extras = ["standard"], version = "^0.115.2"}
cohere = "^5.11.1"


[tool.poetry.group.docs.dependencies]
mkdocs-material = {extras = ["projects"], version = "^9.5.42"}
mkdocs-rss-plugin = "^1.15.0"
mkdocs-coverage = "^1.1.0"
mkdocs-git-authors-plugin = {git = "https://github.com/thangved/mkdocs-git-authors-plugin.git"}
mkdocs-git-committers-plugin-2 = "^2.4.1"
mkdocs-git-revision-date-localized-plugin = "^1.3.0"
mkdocs-github-changelog = "^0.1.0"
mkdocs-minify-plugin = "^0.8.0"
mkdocs-swagger-ui-tag = "^0.6.10"
mkdocs-autorefs = "^1.2.0"
mike = "^2.1.3"
mkdocstrings-python = "^1.12.2"
mkdocs-gen-files = "^0.5.0"
mkdocs-literate-nav = "^0.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
