[project]
name = "flexible-rag"
version = "2.1.1"
description = "Flexible RAG"
authors = [{ name = "Kim Minh Thang", email = "contact@thangved.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
api = ["cohere>=5.13.12", "fastapi>=0.115.9"]
core = ["chromadb>=0.6.3", "nanoid>=2.0.0", "pydantic>=2.10.6"]
docs = [
    "mike>=2.1.3",
    "mkdocs-autorefs>=1.4.0",
    "mkdocs-coverage>=1.1.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-git-authors-plugin",
    "mkdocs-git-committers-plugin-2>=2.5.0",
    "mkdocs-git-revision-date-localized-plugin>=1.3.0",
    "mkdocs-github-changelog>=0.1.0",
    "mkdocs-literate-nav>=0.6.1",
    "mkdocs-material>=9.6.5",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-rss-plugin>=1.17.1",
    "mkdocs-swagger-ui-tag>=0.6.11",
    "mkdocstrings-python==1.16.2",
]
test = ["pytest>=8.3.4", "pytest-cov>=6.0.0", "trio>=0.29.0"]

[tool.uv.sources]
mkdocs-git-authors-plugin = { git = "https://github.com/thangved/mkdocs-git-authors-plugin.git" }
